// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart 1`] = `
<VictoryLabel
  capHeight={0.71}
  direction="inherit"
  lineHeight={1}
  textComponent={<Text />}
  tspanComponent={<TSpan />}
/>
`;

exports[`Chart 2`] = `
<VictoryLabel
  capHeight={0.71}
  direction="inherit"
  lineHeight={1}
  textComponent={<Text />}
  tspanComponent={<TSpan />}
/>
`;

exports[`renders component text 1`] = `
<VictoryLabel
  capHeight={0.71}
  direction="inherit"
  lineHeight={1}
  text="This is a test"
  textComponent={<Text />}
  tspanComponent={<TSpan />}
/>
`;
